# sherloock

./: .gitignore  README.MD  README.md  _init_.py  cli.py  environment.yml  license  main.yml  pyproject.toml  setup.py  test_sherlook.py
.github/workflows/: Django CI.yml  django.yml  go.yml  main.yml  python-package-conda.yml  python-package.yml
examples/: pro_example.py  simple_example.py
sherloock/: cli.py  sherloock.py
sherlook/: _init_.py  cli.py  requirements.txt
