[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Sherlook"
version = "0.1.0"
description = "Adaptive Stateless Intelligence Core"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scikit-learn",
    "psutil",
    "z3-solver",
    "pulp",
    "sympy"
]

[tool.setuptools]
packages = ["Sherlook"]
